--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -479,7 +479,7 @@
     "message": "标签页可以在您的设备间传输。请点击此按钮为此设备设置一个可识别的名称。"
   },
   "sentTabs_notification_title": {
-    "message": "​"
+    "message": "\u200b"
   },
   "sentTabs_notification_message": {
     "message": "标签页已被发送到 $DEVICE$",
@@ -491,7 +491,7 @@
     }
   },
   "sentTabs_notification_title_multiple": {
-    "message": "​"
+    "message": "\u200b"
   },
   "sentTabs_notification_message_multiple": {
     "message": "标签页已被发送到 $DEVICE$",
@@ -503,13 +503,13 @@
     }
   },
   "sentTabsToAllDevices_notification_title": {
-    "message": "​"
+    "message": "\u200b"
   },
   "sentTabsToAllDevices_notification_message": {
     "message": "标签页已被发送到所有设备"
   },
   "sentTabsToAllDevices_notification_title_multiple": {
-    "message": "​"
+    "message": "\u200b"
   },
   "sentTabsToAllDevices_notification_message_multiple": {
     "message": "标签页已被发送到所有设备"
@@ -1203,7 +1203,7 @@
     "message": "(无)"
   },
   "config_longPressOnNewTabButton_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_showNewTabActionSelector_label": {
     "message": "当鼠标指向 “新键标签页” 按钮时，在其上显示选择器按钮，用以指定新标签页打开位置"
@@ -1236,7 +1236,7 @@
     "message": "当前标签页的右邻同级项"
   },
   "config_autoAttachOnNewTabCommand_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_guessNewOrphanTabAsOpenedByNewTabCommandTitle_before": {
     "message": "当一个新打开的标签页的标题为"
@@ -1272,7 +1272,7 @@
     "message": "等同于按住 Ctrl 后再点击（身份相同的右邻同级项）"
   },
   "config_autoAttachOnNewTabButtonMiddleClick_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_middleClickPasteURLOnNewTabButton_label": {
     "message": "用新标签页打开剪贴板中的地址（ * 模拟浏览器中对应于 \"browser.tabs.searchclipboardfor.middleclick\"=\"true\" 的内置行为，您可能需要开启 \"dom.events.asyncClipboard.clipboardItem\"）"
@@ -1302,7 +1302,7 @@
     "message": "身份相同的右邻同级项"
   },
   "config_autoAttachOnNewTabButtonAccelClick_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_autoAttachWithURL_caption": {
     "message": "非空白新建标签页"
@@ -1332,7 +1332,7 @@
     "message": "当前标签页的右邻同级项"
   },
   "config_autoAttachOnDuplicated_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_fromExternal_caption": {
     "message": "对于打开自其它应用的新建标签页"
@@ -1359,7 +1359,7 @@
     "message": "当前标签页的右邻同级项"
   },
   "config_autoAttachOnOpenedFromExternal_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_inheritContextualIdentityToTabsFromExternalMode_label": {
     "message": "身份："
@@ -1398,7 +1398,7 @@
     "message": "当前标签页的右邻同级项"
   },
   "config_autoAttachSameSiteOrphan_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_inheritContextualIdentityToSameSiteOrphanMode_label": {
     "message": "身份："
@@ -1437,7 +1437,7 @@
     "message": "当前标签页的右邻同级项"
   },
   "config_autoAttachOnAnyOtherTrigger_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_autoAttachOnAnyOtherTrigger_caution": {
     "message": "* 请注意：此选项有破坏其它附加组件行为的风险。"
@@ -1869,7 +1869,7 @@
     "message": "用于 “将此标签树添加到书签” 的文件夹名称："
   },
   "config_bookmarkTreeFolderName_after": {
-    "message": "​"
+    "message": "\u200b"
   },
   "config_bookmarkTreeFolderName_description": {
     "message": "可用占位符：%TITLE%（第一个标签页的标题）、%URL%（第一个标签页的网址）、%YEAR%（年，四位数）、%MONTH%（月，两位数）、%DATE%（日，两位数）、%HOURS% (时，两位数)、%MINUTES% (分，两位数)、%SECONDS% (秒，两位数)、%MILLISECONDS% (毫秒，三位数)、%GROUP% (如果是标签页分组，则为其第一个标签页的标题 - 如果不是，则为空白)、%ANY(值 1, 值 2, ...)% (给定参数列表中的第一个有效值)"
