Provide keyboard shortcuts to move focus spatially and collapse/expand tree like general tree UI #3570

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -14,10 +14,16 @@
   "command_focusNext":             { "message": "Focus to Next Tab (expand tree)" },
   "command_focusNextSilently":     { "message": "Focus to Next Tab (don't expand tree)" },
   "command_focusParent":           { "message": "Focus to Parent Tab" },
+  "command_focusParentOrCollapse": { "message": "Collapse Tree or Focus to Parent Tab" },
   "command_focusFirstChild":       { "message": "Focus to First Child Tab" },
+  "command_focusFirstChildOrExpand": { "message": "Expand Tree or Focus to First Child Tab" },
   "command_focusLastChild":        { "message": "Focus to Last Child Tab" },
   "command_focusPreviousSibling":  { "message": "Focus to Previous Sibling Tab" },
   "command_focusNextSibling":      { "message": "Focus to Next Sibling Tab" },
+  "command_simulateUpOnTree":      { "message": "Simulate Up Key on Tree" },
+  "command_simulateDownOnTree":    { "message": "Simulate Down Key on Tree" },
+  "command_simulateLeftOnTree":    { "message": "Simulate Left Key on Tree" },
+  "command_simulateRightOnTree":   { "message": "Simulate Right Key on Tree" },
   "command_tabbarUp":              { "message": "Scroll Tabs Up by Lines" },
   "command_tabbarPageUp":          { "message": "Scroll Tabs Up by Page" },
   "command_tabbarHome":            { "message": "Scroll Tabs to Top" },
