--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -14,10 +14,16 @@
   "command_focusNext":             { "message": "次のタブにフォーカスを移す（ツリーを展開する）" },
   "command_focusNextSilently":     { "message": "次のタブにフォーカスを移す（ツリーを展開しない）" },
   "command_focusParent":           { "message": "親のタブにフォーカスを移す" },
+  "command_focusParentOrCollapse": { "message": "ツリーを折りたたむか、親のタブにフォーカスを移す" },
   "command_focusFirstChild":       { "message": "最初の子タブにフォーカスを移す" },
+  "command_focusFirstChildOrExpand": { "message": "ツリーを展開するか、最初の子タブにフォーカスを移す" },
   "command_focusLastChild":        { "message": "最後の子タブにフォーカスを移す" },
   "command_focusPreviousSibling":  { "message": "同階層の前のタブにフォーカスを移す" },
   "command_focusNextSibling":      { "message": "同階層の次のタブにフォーカスを移す" },
+  "command_simulateUpOnTree":      { "message": "ツリー上での↑キーを模倣" },
+  "command_simulateDownOnTree":    { "message": "ツリー上での↓キーを模倣" },
+  "command_simulateLeftOnTree":    { "message": "ツリー上での←キーを模倣" },
+  "command_simulateRightOnTree":   { "message": "ツリー上での→キーを模倣" },
   "command_tabbarUp":              { "message": "タブの一覧を数行上にスクロール" },
   "command_tabbarPageUp":          { "message": "タブの一覧を1ページ上にスクロール" },
   "command_tabbarHome":            { "message": "タブの一覧を先頭までスクロール" },
