--- a/webextensions/_locales/uk/messages.json
+++ b/webextensions/_locales/uk/messages.json
@@ -358,6 +358,7 @@
   "tabContextMenu_duplicate_label":   { "message": "Дублювати вкладку" },
   "tabContextMenu_tearOff_label":     { "message": "Перенести у нове вікно" },
 
+  "tabContextMenu_closeDuplicatedTabs_label": { "message": "Закрити ду&блікати вкладок" },
   "tabContextMenu_closeAfter_label":  { "message": "Закрити вкладки що праворуч" },
   "tabContextMenu_closeOther_label":  { "message": "Закрити інші вкладки" },
 
