--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -2195,6 +2195,7 @@
   "tabContextMenu_shareTabURL_more_label": {
     "message": "更多…"
   },
+  "tabContextMenu_closeDuplicatedTabs_label": { "message": "关闭重复标签页(&U)" },
   "tabContextMenu_closeMultipleTabs_label": {
     "message": "关闭多个标签页(&M)"
   },
