Use UI labels same to Firefox's dialog #3657

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -174,9 +174,10 @@
   "bookmarkDialog_dialogTitle_multiple": { "message": "Neue Lesezeichen" },
   "bookmarkDialog_title":    { "message": "Name:" },
   "bookmarkDialog_title_accessKey": { "message": "n" },
-  "bookmarkDialog_url":      { "message": "Ort:" },
-  "bookmarkDialog_url_accessKey": { "message": "l" },
-  "bookmarkDialog_parentId": { "message": "Ordner:" },
+  "bookmarkDialog_url":      { "message": "URL:" },
+  "bookmarkDialog_url_accessKey": { "message": "u" },
+  "bookmarkDialog_parentId":      { "message": "Ort:" },
+  "bookmarkDialog_parentId_accessKey": { "message": "l" },
   "bookmarkDialog_saveContainerRedirectKey": { "message": "Umgebungs-Informationen für Container Bookmarks speichern" },
   "bookmarkDialog_accept":   { "message": "Speichern" },
   "bookmarkDialog_cancel":   { "message": "Abbrechen" },
