--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -180,9 +180,10 @@
   "bookmarkDialog_dialogTitle_multiple": { "message": "New Bookmarks" },
   "bookmarkDialog_title":    { "message": "Name:" },
   "bookmarkDialog_title_accessKey": { "message": "n" },
-  "bookmarkDialog_url":      { "message": "Location:" },
-  "bookmarkDialog_url_accessKey": { "message": "l" },
-  "bookmarkDialog_parentId": { "message": "Folder:" },
+  "bookmarkDialog_url":      { "message": "URL:" },
+  "bookmarkDialog_url_accessKey": { "message": "u" },
+  "bookmarkDialog_parentId":      { "message": "Location:" },
+  "bookmarkDialog_parentId_accessKey": { "message": "l" },
   "bookmarkDialog_saveContainerRedirectKey": { "message": "Save container information for Container Bookmarks" },
   "bookmarkDialog_accept":   { "message": "Save" },
   "bookmarkDialog_cancel":   { "message": "Cancel" },
