--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -181,8 +181,9 @@
   "bookmarkDialog_title":    { "message": "名前(N):" },
   "bookmarkDialog_title_accessKey": { "message": "n" },
   "bookmarkDialog_url":      { "message": "URL:" },
-  "bookmarkDialog_url_accessKey": { "message": "l" },
-  "bookmarkDialog_parentId": { "message": "フォルダー:" },
+  "bookmarkDialog_url_accessKey": { "message": "u" },
+  "bookmarkDialog_parentId": { "message": "保存場所:" },
+  "bookmarkDialog_parentId_accessKey": { "message": "l" },
   "bookmarkDialog_saveContainerRedirectKey": { "message": "コンテナーの情報をContainer Bookmarks形式で保存する" },
   "bookmarkDialog_accept":   { "message": "保存" },
   "bookmarkDialog_cancel":   { "message": "キャンセル" },
