More compatible bookmark dialog (#3664)
Make bookmark creation dialog more compatible to Firefox's native one #3657

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -172,11 +172,11 @@
 
   "bookmarkDialog_dialogTitle_single":   { "message": "Neues Lesezeichen" },
   "bookmarkDialog_dialogTitle_multiple": { "message": "Neue Lesezeichen" },
-  "bookmarkDialog_title":    { "message": "Name:" },
+  "bookmarkDialog_title":    { "message": "Name" },
   "bookmarkDialog_title_accessKey": { "message": "n" },
-  "bookmarkDialog_url":      { "message": "URL:" },
+  "bookmarkDialog_url":      { "message": "URL" },
   "bookmarkDialog_url_accessKey": { "message": "u" },
-  "bookmarkDialog_parentId":      { "message": "Ort:" },
+  "bookmarkDialog_parentId":      { "message": "Ort" },
   "bookmarkDialog_parentId_accessKey": { "message": "l" },
   "bookmarkDialog_saveContainerRedirectKey": { "message": "Umgebungs-Informationen für Container Bookmarks speichern" },
   "bookmarkDialog_accept":   { "message": "Speichern" },
