--- a/webextensions/_locales/zh_TW/messages.json
+++ b/webextensions/_locales/zh_TW/messages.json
@@ -156,11 +156,11 @@
   
     "bookmarkDialog_dialogTitle_single":   { "message": "新書籤" },
     "bookmarkDialog_dialogTitle_multiple": { "message": "新書籤" },
-    "bookmarkDialog_title":    { "message": "名字：" },
+    "bookmarkDialog_title":    { "message": "名字" },
     "bookmarkDialog_title_accessKey": { "message": "n" },
-    "bookmarkDialog_url":      { "message": "URL：" },
+    "bookmarkDialog_url":      { "message": "URL" },
     "bookmarkDialog_url_accessKey": { "message": "u" },
-    "bookmarkDialog_parentId":      { "message": "網址：" },
+    "bookmarkDialog_parentId":      { "message": "網址" },
     "bookmarkDialog_parentId_accessKey": { "message": "l" },
     "bookmarkDialog_saveContainerRedirectKey": { "message": "Save container information for Container Bookmarks" },
     "bookmarkDialog_accept":   { "message": "儲存" },
