--- a/webextensions/_locales/ru/messages.json
+++ b/webextensions/_locales/ru/messages.json
@@ -172,11 +172,11 @@
 
   "bookmarkDialog_dialogTitle_single":   { "message": "Новая закладка" },
   "bookmarkDialog_dialogTitle_multiple": { "message": "Новые закладки" },
-  "bookmarkDialog_title":    { "message": "Заголовок:" },
+  "bookmarkDialog_title":    { "message": "Заголовок" },
   "bookmarkDialog_title_accessKey": { "message": "n" },
-  "bookmarkDialog_url":      { "message": "URL:" },
+  "bookmarkDialog_url":      { "message": "URL" },
   "bookmarkDialog_url_accessKey": { "message": "u" },
-  "bookmarkDialog_parentId": { "message": "Адрес:" },
+  "bookmarkDialog_parentId": { "message": "Адрес" },
   "bookmarkDialog_parentId_accessKey": { "message": "l:" },
   "bookmarkDialog_saveContainerRedirectKey": { "message": "Сохранить информацию о контейнере для закладок из контейнера" },
   "bookmarkDialog_accept":   { "message": "Сохранить" },
