--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -269,7 +269,7 @@
 
   "message_startup_requestPermissions_description": { "message": "⚠There are some features requiring extra permissions. If you want to activate them, please grant permissions manually." },
   "message_startup_requestPermissions_bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs, auto migration of bookmarked internal URLs imported from other environments, and detection of tabs opened from bookmarks (requires access to bookmarks)" },
-  "message_startup_requestPermissions_allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts / Don't restore blank window which was for a closed dialog, by actions to restore closed tabs" },
+  "message_startup_requestPermissions_allUrls":   { "message": "Show tab preview image on tab hover / Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts / Don't restore blank window which was for a closed dialog, by actions to restore closed tabs" },
   "message_startup_requestPermissions_clipboardRead": { "message": "Allow to open a new tab with the URL in the clipboard, by middle click on the \"New Tab\" button (*you may need to activate \"dom.events.asyncClipboard.clipboardItem\")" },
 
   "message_startup_userChromeCss_notify": { "message": "How to hide top tab bar and sidebar header?" },
@@ -409,8 +409,8 @@
   "config_maxPinnedTabsRowsAreaPercentage_label_after":  { "message": "% of the sidebar" },
   "config_animation_label": { "message": "Enable animation effects" },
   "config_animationForce_label": { "message": "Enable animations regardless \"reduce animations\" platform settings" },
-  "config_tabPreviewTooltip_label": { "message": "Show tab preview image on the content area instead of regular tooltip" },
-  "config_tabPreviewTooltipInSidebar_label": { "message": "Fall back to show tab preview in the sidebar panel, if tab preview on the content area is not available" },
+  "config_tabPreviewTooltip_label": { "message": "Show tab preview image on tab hover, instead of legacy tooltip (*You need to allow executing scripts on webpages)" },
+  "config_tabPreviewTooltipInSidebar_label": { "message": "Fall back to show tab preview in the sidebar panel, if the preview cannot be shown out of the sidebar" },
   "config_showCollapsedDescendantsByTooltip_label": { "message": "Show collapsed descendants in the tooltip on a tab" },
   "config_shiftTabsForScrollbarDistance_label_before": { "message": "Shift tabs aside " },
   "config_shiftTabsForScrollbarDistance_label_after": { "message": " to keep in-tab buttons touchable avoiding covered with the auto-shown scrollbar" },
@@ -751,7 +751,7 @@
 
   "config_shortcuts_caption": { "message": "Keyboard shortcuts" },
 
-  "config_requestPermissions_allUrls_ctrlTabTracking":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
+  "config_requestPermissions_allUrls_ctrlTabTracking":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts (*You need to allow executing scripts on webpages)" },
   "config_autoExpandOnTabSwitchingShortcutsDelay_before": { "message": "Expand active collapsed tree when the Tab key is pressed over " },
   "config_autoExpandOnTabSwitchingShortcutsDelay_after": { "message": "msec" },
   "config_accelKey_label":   { "message": "Accelerator key for keyboard shortcuts (*You need to match this to the config \"ui.key.accelKey\"):" },
