--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -269,7 +269,7 @@
 
   "message_startup_requestPermissions_description": { "message": "⚠以下の機能には追加の権限が必要です。機能を使いたい場合のみ権限を付与して下さい。" },
   "message_startup_requestPermissions_bookmarks": { "message": "コンテキストメニューの「このツリーをブックマーク」、他の環境からインポートされたブックマークの内部URLの自動移行、ブックマークから開かれたタブの検出（ブックマークの操作の許可が必要）" },
-  "message_startup_requestPermissions_allUrls":   { "message": "キーボードショートカットでのタブ切り替え中は、折りたたまれた子孫タブにはフォーカスせず、折りたたまれたツリーも展開しない / タブを開き直す操作でダイアログ用の空のウィンドウが復元されないようにする" },
+  "message_startup_requestPermissions_allUrls":   { "message": "ツールチップの代わりにタブのプレビュー画像を表示する / キーボードショートカットでのタブ切り替え中は、折りたたまれた子孫タブにはフォーカスせず、折りたたまれたツリーも展開しない / タブを開き直す操作でダイアログ用の空のウィンドウが復元されないようにする" },
   "message_startup_requestPermissions_clipboardRead": { "message": "「新しいタブ」ボタンの中ボタンクリックでクリップボード内のURLを開く（※\"dom.events.asyncClipboard.clipboardItem\"の有効化が必要）" },
 
   "message_startup_userChromeCss_notify": { "message": "タブバーとサイドバーのヘッダーを隠したい場合" },
@@ -406,8 +406,8 @@
   "config_maxPinnedTabsRowsAreaPercentage_label_after":  { "message": "%まで" },
   "config_animation_label": { "message": "アニメーション効果を有効にする" },
   "config_animationForce_label": { "message": "アニメーションを抑制するプラットフォームの設定を無視して有効にする" },
-  "config_tabPreviewTooltip_label": { "message": "ツールチップの代わりにコンテンツ領域上にタブのプレビュー画像を表示する" },
-  "config_tabPreviewTooltipInSidebar_label": { "message": "タブのプレビューをコンテンツ領域上に表示できないときは、サイドバー内で表示する" },
+  "config_tabPreviewTooltip_label": { "message": "タブの上にカーソルを乗せたとき、ツールチップの代わりにタブのプレビュー画像を表示する（※Webページ内でのスクリプトの実行を許可する必要があります）" },
+  "config_tabPreviewTooltipInSidebar_label": { "message": "プレビューをサイドバー外に表示できないときはサイドバー内で表示する" },
   "config_showCollapsedDescendantsByTooltip_label": { "message": "タブのツールチップに折りたたまれた子孫タブの情報を含める" },
   "config_shiftTabsForScrollbarDistance_label_before": { "message": "自動的に表示されるスクロールバーに覆われてタブ内のボタンに触れなくならないよう、" },
   "config_shiftTabsForScrollbarDistance_label_after": { "message": "ぶんだけタブをずらして表示する" },
