--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -733,6 +733,7 @@
   "config_dropLinksOnTabBehavior_load":    { "message": "Load to the tab" },
   "config_dropLinksOnTabBehavior_newtab":  { "message": "Open new child tab" },
   "config_simulateTabsLoadInBackgroundInverted_label": { "message": "When you open a dropped link in a new tab, switch to it immediately (*simulation of the browser's built-in option \"When you open a link, image or media in a new tab, switch to it immediately\" (\"browser.tabs.loadInBackground\"))" },
+  "config_tabsLoadInBackgroundDiscarded_label": { "message": "Keep tabs pended until they become active" },
 
   "config_insertDroppedTabsAt_caption": { "message": "Insertion position of children dropped onto a parent" },
   "config_insertDroppedTabsAt_inherit": { "message": "Treat same as new children opened from the parent" },
